--- a/.gitignore
+++ b/.gitignore
@@ -49,5 +49,8 @@ Thumbs.db
 *.wmv
 
 /.vs
-/Room Delight/bin/Debug
+/Room Delight/bin/Debug/*
+!Room Delight/bin/Debug/Database and File Config
+!Room Delight/bin/Debug/Sounds
+
 /Room Delight/obj/x86/Debug
